<resources>
    <string name="app_name">Journal</string>
    <string name="title_text">Self Gratitude Journal</string>
    <string name="grateful_text">What are you grateful for today ?</string>
    <string name="get_started">Get Started</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Enter Username</string>
    <string name="title">Title</string>
    <string name="thoughts">Your Thoughts...</string>
    <string name="save">Save</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="menu_sign_out" >Signout</string>
    <string name="list_empty_hint">Write a Journal</string>
    <string name="Title">title</string>
    <string name="date">Date</string>
</resources>