<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:elevation="10dp"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/journal_row_username"
            android:text="yasith"
            android:textSize="17sp"
            android:padding="3dp"
            android:gravity="start"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/journal_row_share_button"
            android:src="@android:drawable/ic_menu_share"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/journal_image_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_one"/>

        <TextView
            android:id="@+id/journal_title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/journal_thought_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thoughts"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/journal_time_list"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/date"
            android:textStyle="italic"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>